--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -24,7 +24,7 @@
     <div class='control-group'>
         <label class='control-label' for='set-regrowth-rate'>Regrowth rate</label>
         <div class='controls'>
-            <input class='input-small' type='number' id='set-regrowth-rate' data-bind='value:regrowthRate' />
+            <input class='input-small' step='0.1' type='number' id='set-regrowth-rate' data-bind='value:regrowthRate' />
         </div>
     </div>
     <div class='control-group'>
@@ -32,7 +32,7 @@
         <div class='controls'>
             <select id='pick-template'>
                 <option value='WELCOME'>Welcome</option>
-                <option value='INSTRUCTIONS'>Instructions</option>
+                <option value='INSTRUCTIONS' selected>Instructions</option>
                 <option value='PRACTICE'>Practice round</option>
                 <option value='REGULAR'>Actual round</option>
                 <option value='CHAT'>Chat</option>
@@ -106,13 +106,13 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
 </div>
 </div>
 
-<div data-bind="if: maxHarvestDecision() > 0">
-    <div style="background: url('{{STATIC_URL}}images/forestry/pine-tree.png'); width:{{max_width}}px; height: {{max_height}}px;">
+<div data-bind="ifnot: isResourceEmpty()">
+    <div data-bind='style: { width: resourceWidth, height: resourceHeight, background-image: "url(\'{{STATIC_URL}}images/forestry/pine-tree.png\')"resourceIconUrl }" >
         &nbsp;
     </div>
 </div>
-<div data-bind="ifnot: maxHarvestDecision() > 0">
-    <div style='padding: 8px; margin: auto; border: solid 1px; background: #E8E8E8 url({{STATIC_URL}}images/forestry/deforestation.jpg) no-repeat center; height: 282px; width:425px;'>
+<div data-bind="if: isResourceEmpty()">
+    <div style='padding: 8px; margin: auto; border: solid 1px; background-image: url({{STATIC_URL}}images/forestry/deforestation.jpg) no-repeat center; height: 282px; width:425px;'>
         &nbsp;
     </div>
 </div>
@@ -128,16 +128,15 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
 </div>
 </div>
 
-<div data-bind='if: maxHarvestDecision() > 0'>
+<div data-bind='ifnot: isResourceEmpty()'>
 <form id='vcweb-form' action='' method='post' class='form-horizontal'>
     {% csrf_token %}
     <div class='control-group'>
-        How many resources will you harvest this round? <br/>
         <label class='control-label' for='harvestDecision'>
-            Enter a number between 0 and <span class='badge badge-info' data-bind='text:maxHarvestDecision'></span>:
+        Harvest Decision
         </label>
         <div class='controls'>
-            <input id='harvestDecision' type="text" name='harvest_decision' class='required digits' maxlength='1' placeholder="0" />
+            <input id='harvestDecision' placeholder='0' type="number" name='harvest_decision' class='required' min="0" data-bind="attr: { max: maxHarvestDecision }" /> 
             <input id='participantGroupId' type='hidden' name='participant_group_id' />
         </div>
     </div>
@@ -148,7 +147,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
     </div>
 </form>
 </div>
-<div data-bind='if: maxHarvestDecision == 0'>
+<div data-bind='if: isResourceEmpty()'>
 <div class='alert alert-error'>
     There are no longer enough trees to harvest. Please wait until the next round begins.
 </div>
@@ -160,6 +159,15 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
         function ExperimentModel(experimentModelJson) {
             var self = this;
             var model = ko.mapping.fromJS(experimentModelJson);
+            model.isResourceEmpty = function() {
+                return model.resourceLevel() == 0;
+            }
+            model.resourcesToDisplay = function() {
+                if (model.resourceLevel() > 0) {
+                    return Math.min(model.resourceLevel(), 20);
+                }
+                return 0;
+            }
             return model;
         }
         function update(experimentModel) {
@@ -170,27 +178,6 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
         function initialize(experimentModelJson) {
             var experimentModel = new ExperimentModel(experimentModelJson);
             ko.applyBindings(experimentModel);
-            // FIXME: needs to be updated for KO
-            /*
-            $("#vcweb-form").validate({
-                rules: {
-                    harvest_decision: {
-                        required: true,
-                        range: [0, {{max_harvest_decision}}]
-                    }
-                },
-                messages: {
-                    harvest_decision: {
-                        required: "Please enter a harvest decision",
-                        range: "Please enter a number between 0 and {{ max_harvest_decision }}"
-                    }
-                },
-            });
-            $('#harvest-decision-id').focus(function() {
-                this.select();
-            });
-            $('#harvest-decision-id').focus();
-            */
             var s = connect();
             s.onmessage = function(json_string) {
                 var json = jQuery.parseJSON(json_string);
