--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -36,7 +36,6 @@
                 <option value='PRACTICE'>Practice round</option>
                 <option value='REGULAR'>Actual round</option>
                 <option value='CHAT'>Chat</option>
-                <option value='WAIT'>Waiting room</option>
             </select>
         </div>
     </div>
@@ -90,13 +89,6 @@ Each round you must have <b>at least</b> <span class='badge badge-important' dat
 To better illustrate, we will begin with two practice rounds.  These rounds will not contribute to your earnings.
 </p>
 </script>
-<script type='text/html' id='WAIT'>
-<h1>Not implemented yet, not sure if we need this template.</h1>
-<p>
-Do we need a waiting page after participants enter their decision or just return to the same form that shows the harvest
-decision?
-</p>
-</script>
 <script type='text/html' id='REGULAR'>
 <h3 data-bind='text: roundSequenceLabel'></h3>
 <div data-bind='if: practiceRound'>
@@ -119,13 +111,14 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
     <div class='alert alert-error'>There are no more resources to harvest. Please wait quietly until the next round begins.</div>
 </div>
 <div class='alert alert-message'>
-    You require <span class='badge badge-important' data-bind='text:survivalCost'></span> to survive and you currently have <span class='badge badge-success' data-bind='text: storage'></span> resources stored.  
-    There are <span class='badge badge-warning' data-bind='text: resourceLevel'></span> resources left for your entire group.
+    You require <span class='badge badge-important' data-bind='text:survivalCost'></span> to survive and you currently have <strong data-bind='text: storage'></strong> resources stored.  
+    There are <span class='badge badge-warning' data-bind='text: resourceLevel'></span> resources left for your entire
+    group, and you can harvest up to <strong data-bind='text:maxHarvestDecision'></strong> resources.
 </div>
 
 <div data-bind='if: hasSubmit'>
 <div class='alert alert-error'>
-    You have already made a decision to harvest <b>{{ harvest_decision.value }}</b> resources.  You may change your
+    You have submitted a decision to harvest <span class='badge badge-important' data-bind='text: harvestDecision'></span> resources.  You may change your
     decision until the experimenter ends the round.
 </div>
 </div>
@@ -138,7 +131,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
         Harvest Decision
         </label>
         <div class='controls'>
-            <input id='harvestDecision' placeholder='0' type="number" name='harvest_decision' class='required' min="0" data-bind="attr: { max: maxHarvestDecision }" /> 
+            <input id='harvestDecision' placeholder='0' type="number" name='harvest_decision' class='required' min="0" data-bind="value: harvestDecision, attr: { max: maxHarvestDecision }" /> 
             <input id='participantGroupId' type='hidden' name='participant_group_id' />
         </div>
     </div>
@@ -155,6 +148,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
         function ExperimentModel(experimentModelJson) {
             var self = this;
             var model = ko.mapping.fromJS(experimentModelJson);
+            model.harvestDecision = ko.observable(0);
             model.numberOfTreesPerRow = 10;
             model.isResourceEmpty = function() {
                 return model.resourceLevel() == 0;
@@ -206,13 +200,16 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
                 }
                 experimentModel.roundType(templateName);
                 $('#submitDecision').click(function(evt) {
+                    console.log("CLICKED");
                     evt.preventDefault();
                     // make ajax post with data, update experiment model
-                    $.post("participate", $('#vcweb-form').serialize()).success(function(data) {
-                        console.log("setting hasSubmit to true.");
-                        alert("submit vcweb form back to participate");
-                        experimentModel.hasSubmit(true);
+                    /*
+                    $.post("participate", $('#vcweb-form').serialize(), function(data) {
+                        console.log("successfully posted form.");
                     });
+                    */
+                    experimentModel.hasSubmit(true);
+                    console.log("set hassubmit to true");
                     return false;
                 });
             });
