--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -167,7 +167,7 @@ This is a practice round.  The decisions you make in this round will <b>NOT</b> 
                 return model.resourcesToDisplay() * 30 + "px"; 
             }
             model.resourceImageHeight = function() {
-                return "79px;"
+                return "79px";
             }
             return model;
         }
