css / dom fixes for participant dashboard and logo header.

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -59,10 +59,10 @@
 <div id='logo'>
 {% block logo %}
 <div class='row-fluid'>
-    <div class='span4'>
-        <img src='{{STATIC_URL}}images/vcweb-logo.png' alt='vcweb logo'/>
+    <div class='span2'>
+        <img class='logo' src='{{STATIC_URL}}images/vcweb-logo.png' width='120' height='90' alt='vcweb logo'/>
     </div>
-    <div class='span8'>
+    <div class='span10'>
         <h1>
             the virtual commons web environment
         </h1>
