s/allStorage/totalStorage in the view model, adding jquery cookies plugin
--HG--
rename : vcweb/static/js/knockout.mapping.min.js => vcweb/static/js/ko/knockout.mapping.min.js
rename : vcweb/static/js/knockout.min.js => vcweb/static/js/ko/knockout.min.js

--- a/vcweb/boundaries/templates/boundaries/participate.html
+++ b/vcweb/boundaries/templates/boundaries/participate.html
@@ -51,7 +51,7 @@
     <tr class='success'>
         <td data-bind='text: groupId'></td>
         <td data-bind='text: resourceLevel'></td>
-        <td data-bind='text: allStorage'></td>
+        <td data-bind='text: totalStorage'></td>
         <td data-bind='text: survivalCost'></td>
         <td data-bind='text: regrowthRate'></td>
     </tr>
