adding jquery cookie plugin from https://github.com/carhartl/jquery-cookie

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -115,7 +115,7 @@
         <script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/{{jquery_version}}/jquery.min.js'></script>
         {% endwith %}
         <script type='text/javascript' src='{{STATIC_URL}}bootstrap/js/bootstrap.min.js'></script>
-        <script type='text/javascript' src='{{STATIC_URL}}js/jquery.cookies.2.2.0.min.js'></script>
+        <script type='text/javascript' src='{{STATIC_URL}}js/jquery.cookie.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/ko/knockout.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/ko/knockout.mapping.min.js'></script>
         <script type='text/javascript' src='{{STATIC_URL}}js/common.js'></script>
