adding more controls to activity detail page

--- a/vcweb/core/templates/base.html
+++ b/vcweb/core/templates/base.html
@@ -72,9 +72,9 @@
 </div>
 <div class='container'>
     <noscript>
-        <div class='alert alertIcon ui-corner-all'>
-            Please <b>enable JavaScript</b> before using this site.  <br/>Our experiments are interactive and
-            <b>will not function properly</b> without JavaScript.
+        <div class='alert alert-error'>
+            <p>Please <b>enable JavaScript</b> before using this site.</p>
+            <p>Our experiments are interactive and <b>will not function properly</b> without JavaScript.</p>
         </div>
     </noscript>
     {% if messages %}
