--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -35,7 +35,7 @@
             <h3>Available activities for {{request.user.participant}}</h3>
             <ul>
                 {% for activity in activities %}
-                <li>{{ activity }}, {{ activity.time_slots }}</li>
+                <li><a href='/lighterprints/activity/{{activity.pk}}'>{{ activity }}, {{ activity.time_slots }}</a></li>
                 {% empty %}
                 <li>No more available activities, please check back again tomorrow.</li>
                 {% endfor %}
@@ -45,7 +45,7 @@
             <h3>All activities</h3>
             <ul>
                 {% for activity in all_activities %}
-                <li><a href='{{activity.detail_url}}'>Level {{activity.level}} - {{activity}}, {{activity.time_slots}}</a></li>
+                <li><a href='/lighterprints/activity/{{activity.pk}}'>Level {{activity.level}} - {{activity}}, {{activity.time_slots}}</a></li>
                 {% endfor %}
             </ul>
         </div>
