--- a/vcweb/lighterprints/templates/lighterprints/base.html
+++ b/vcweb/lighterprints/templates/lighterprints/base.html
@@ -7,5 +7,6 @@
 {% block headerlinks %}
 <li class='{% active_re request 'participate' %}'><a href='{% url 'lighterprints:participate' experiment_id=experiment.id %}'>Participate</a></li>
 <li><a href='http://vcweb.asu.edu/devfoot'>Mobile</a></li>
+<li><a href='{{ logout }}'>Logout ({{request.user.email}})</a></li>
 {% endblock %}
 
