--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -7,6 +7,7 @@
     <ul class='nav nav-tabs'>
         <li class='active'><a href='#home' data-toggle='tab'>Home</a></li>
         <li><a href='#group-wall' data-toggle='tab'>Group Wall</a></li>
+        <li><a href='#group-score' data-toggle='tab'>Score</a></li>
         <li><a href='#all-activities' data-toggle='tab'>All activities</a></li>
     </ul>
     <div class='tab-content'>
@@ -19,19 +20,23 @@
             </p>
             <h3>Activities, Green Points, and Levels</h3>
             <p>
-            Each activity has a number of green points associated with it.  For example, 
-            <span class='text-success'>eating locally grown food for lunch</span> (which is only available from 12 PM to 2 PM) is worth <span class='badge badge-success'>15</span> green points.
+            Each activity is worth a certain number of green points.  For example, <span class='text-success'>eating locally grown food for lunch</span> (which is only available from 12 PM to 2 PM) is worth <span class='badge badge-success'>15</span> green points.
             In order to perform this activity you must login to the application between 12 PM and 2 PM, select the activity from the
             list below, and click the "Perform this activity" button.
             </p>
             <p>
-            Your group is currently <span class='badge badge-important'>level {{ group_level }}</span> and has accumulated <span
-                class='badge badge-important'>{{average_points}} average points</span>.  In order to
-            advance in level and unlock more activities the <strong>average number of points contributed by each member of your
-                group</strong> must be equal to or greater than <span class='badge badge-info'>{{points_to_next_level}}</span>.  In order to
+            Your group is currently <span class='badge badge-important'>level <span data-bind='text:groupLevel'>{{ group_level }}</span></span> and has accumulated 
+            <span class='badge badge-important'><span data-bind='text:averagePoints'>{{average_points}}</span> average points</span>.  In order to
+            advance in level and unlock more activities the <strong>average number of points contributed by each member of your group</strong> must be equal to or greater than <span data-bind='text: pointsToNextLevel' class='badge badge-info'>{{points_to_next_level}}</span>.  In order to
             reach this target <span class='text-warning'>you and a majority of the members of your group</span> must perform
             high point activities when they are available.
             </p>
+            <h3>How to participate</h3>
+            <p>
+            To begin participating, click on the "All activities" tab, and select an activity you'd like to perform.
+            Available activities will be marked with an exclamation point: <i class='icon-exclamation-sign'></i>
+            </p>
+            <!--
             <h3>Available activities for {{request.user.participant}}</h3>
             <ul>
                 {% for activity in activities %}
@@ -40,8 +45,18 @@
                 <li>No more available activities, please check back again tomorrow.</li>
                 {% endfor %}
             </ul>
+            -->
         </div>
         <div class='tab-pane' id='all-activities'>
+            <p>
+            Activities are divided up into 3 levels.  In order to unlock higher level activities your group must earn
+            enough points so that the <strong>average number of points</strong> per participant is greater than 
+            <span data-bind='text:pointsToNextLevel' class='badge badge-info'>{{points_to_next_level}}</span>.
+            </p>
+            <p>
+            Currently available activities are marked with a <i class='icon-exclamation-sign'></i>.  You can click on
+            any activity's name to learn more information about it.
+            </p>
             {% regroup all_activities by level as activities_by_level %}
             {% for activity_group in activities_by_level %}
             <div class='accordion' id='accordion-level{{activity_group.grouper}}'>
@@ -50,8 +65,12 @@
                 <div class='accordion-group alert alert-message'>
                     <div class='accordion-heading'>
                         <a class='accordion-toggle' data-toggle='collapse' data-parent='#accordion-level{{activity_group.grouper}}'
-                            href='#activity{{activity.pk}}'>{{activity.display_name}} <i class='icon-chevron-right'></i><span class='pull-right text-info'>{{activity.time_slots}}</span>
-                        </a>                    
+                            href='#activity{{activity.pk}}'>{{activity.display_name}} <i class='icon-chevron-right'></i><span class='pull-right text-info'>
+                                {% if activity.available_now %}
+                                <i id='activity-available-sign-{{activity.pk}}' class='icon-exclamation-sign'></i>
+                                {%endif%}
+                                {{activity.time_slots}}</span>
+                        </a>
                     </div>
                     <div id='activity{{activity.pk}}' class='accordion-body collapse'>
                         <div class='accordion-inner'>
@@ -66,7 +85,7 @@
                             <p>For more info, please visit <a target="_blank" href='{{activity.url}}'>{{activity.url}}</a></p>
                             {% if not activity.available_now %}
                             <div class='alert alert-error'>
-                                <i class='icon-exclamation-sign'></i>This activity is not available right now.  Please check again later.
+                                <i class='icon-warning-sign'></i>This activity is not available right now.  Please check again later.
                             </div>
                             {% endif %}
                             <form class='form-horizontal' method='post' id='activityform{{activity.pk}}'>
@@ -82,8 +101,63 @@
             </div>
             {% endfor %}
         </div>
+        <div class='tab-pane' id='group-score'>
+            <h3>Group Score Summary</h3>
+            Your group is currently <span class='badge badge-important'>level <span data-bind='text:groupLevel'>{{ group_level }}</span></span> 
+            and has accumulated <span class='badge badge-important'><span data-bind='text:averagePoints'>{{average_points}}</span> average points</span>.  
+            In order to advance in level and unlock more activities the <strong>average number of points contributed by each member of your
+            group</strong> must be equal to or greater than <span data-bind='text: pointsToNextLevel' class='badge badge-info'>{{points_to_next_level}}</span>.  In order to reach this target <span class='text-warning'>you and a
+            majority of the members of your group</span> must perform high point activities when they are available.
+            <table class='table table-bordered'>
+                <thead><tr><th>Level</th><th>Points to next level</th><th>Average number of points</th><th>Total points</th></tr></thead>
+                <tbody>
+                <tr>
+                    <td data-bind='text: groupLevel'></td>
+                    <td data-bind='text: pointsToNextLevel'></td>
+                    <td data-bind='text: averagePoints'></td>
+                    <td data-bind='text: totalPoints'></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
         <div class='tab-pane' id='group-wall'>
-            <h3>not implemented yet</h3>
+            <h3>Recent activity</h3>
+            <div data-bind='foreach: recent_activity'>
+                <div class='alert alert-info'>
+                    <span data-bind='text: participant_name'></span> performed <span data-bind='text: display_name'></span>,
+                    earning <span class='badge badge-success' data-bind='text:points'></span> green points.
+                    <b class='pull-right'><span data-bind='text: date_created'></span> ago</b>
+
+                </div>
+            </div>
+            <h3>Chat messages</h3>
+            <div id='chat-div' class='chat notice'>
+                <div data-bind='ifnot: hasChatMessages() '>
+                    <div class='alert alert-warning'>
+                        No chat messages have been posted yet.
+                    </div>
+                </div>
+                <div data-bind='if: hasChatMessages()'>
+                    <div data-bind='foreach: chat_messages'>
+                        <div class='alert alert-message chat-message'>
+                            <strong data-bind='text: participant_name'></strong>: <em><span data-bind='text: message'></span></em>
+                            <b class='pull-right' ><span data-bind='text: date_created'></span> ago</b>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <form id='chat-form' class='form-horizontal' data-bind='submit: submitChatMessage'>
+                <input type='hidden' name='participant_group_id' value='{{participant_group_relationship.id}}'/>
+                <div class='control-group'>
+                    <label class='control-label' for='chatText'>Chat</label>
+                    <div class='controls'>
+                        <input type='text' id='chatText' name='message' placeholder='Send a message to your group' />
+                    </div>
+                </div>
+                <div class='control-group'>
+                    <div class='controls'><a class='btn' data-bind='click: submitChatMessage'>Send</a></div>
+                </div>
+            </form>
         </div>
     </div>
 </div>
@@ -91,16 +165,9 @@
 {% block javascript %}
 {{ block.super }}
 <script type='text/javascript'>
-function performActivity(activityId) {
-    var formData = $('#activityform' + activityId).serialize();
-    alert("posting activity form " + formData);
-    $.post('/lighterprints/api/do-activity', formData, function(data) {
-        console.log(data);
-        alert("Successfully performed activity.");
-    });
-    return false;
-}
 $(function() {
+    // set up perform activity click handlers on any activity-actions that aren't disabled
+    // FIXME: a lot of this DOM manipulation could be cleaned up using KO, refactor after the pretest
     $('#all-activities a.activity-action:not(.disabled)').click(function(evt) {
         var activityId = $(this).attr("data-activity-id");
         var formData = $('#activityform' + activityId).serialize();
@@ -109,6 +176,7 @@ $(function() {
             console.log(data);
             if (data.success) {
                 self.addClass('disabled').off('click');
+                $('#activity-available-sign-' + activityId).remove();
                 alert("successfully performed activity.");
             }
             else {
@@ -116,6 +184,43 @@ $(function() {
             }
         });
     });
+    // set up bootstrap nav-tabs to be semi-refresh friendly
+    var url = document.location.toString();
+    if (url.match('#')) {
+        $('.nav-tabs a[href=#'+url.split('#')[1]+']').tab('show');
+    }
+    $('.nav-tabs a').on('shown', function(evt) {
+        window.location.hash = evt.target.hash;
+    });
+    function GroupWallModel(groupActivityJson) {
+        var self = this;
+        var model = ko.mapping.fromJS(groupActivityJson);
+        model.hasChatMessages = function() {
+            return model.chat_messages().length > 0;
+        }
+        model.submitChatMessage = function() {
+            var formData = $('#chat-form').serialize();
+            $.post('/lighterprints/api/message', formData, function(data) {
+                ko.mapping.fromJS(data, model);
+            });
+            $('#chatText').val('');
+            return false;
+        }
+        return model;
+    }
+    function GroupScoreModel(groupScoreJson) {
+        var self = this;
+        var model = ko.mapping.fromJS(groupScoreJson);
+        return model;
+    }
+    // set up KO bindings for group wall
+    var groupActivityJson = $.parseJSON("{{ group_activity_json|escapejs }}");
+    var groupWallModel = new GroupWallModel(groupActivityJson);
+    ko.applyBindings(groupWallModel, document.getElementById('group-wall'));
+    // set up KO bindings for group score
+    var groupScoreJson = $.parseJSON("{{ group_score_json|escapejs }}");
+    var groupScoreModel = new GroupScoreModel(groupScoreJson);
+    ko.applyBindings(groupScoreModel, document.getElementById('group-score'));
 });
 </script>
 {% endblock %}
