--- a/vcweb/static/css/style.css
+++ b/vcweb/static/css/style.css
@@ -223,9 +223,13 @@ ul.horizontal>li {
 .chat {
     height: 20em;
     overflow: auto;
+    margin-bottom: 10px;
 }
 #chatText {
-    width: 100%;
+    width: 90%;
+}
+.chat-message {
+    margin-bottom: 5px;
 }
 /* footer css from guarantee */
 #footer {
